# soma-hex

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
ext/: generator.cpp
inc/: BaseView.h  EView.h  ExtraFrame.h  ExtraTree.h  FrameProc.h  Soma.h  SplitterE.h  base.h  csv_index.h  mapped_file.h  resource.h  row_cache_buffer.h
res/: Soma.exe.manifest  Soma.rc
src/: EView.cpp  ExtraFrame.cpp  ExtraTree.cpp  FrameProc.cpp  Soma.cpp  SplitterE.cpp  csv_index.cpp  mapped_file.cpp  row_cache_buffer.cpp
